<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:clearTaskOnLaunch="true" >

    <Button
        android:id="@+id/button_about"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/about" />

    <Button
        android:id="@+id/button_take_tour"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/take_tour" />

    <Button
        android:id="@+id/button_availability"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/availability" />

    <Button
        android:id="@+id/button_book_tour"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/book_tour" />

    <Button
        android:id="@+id/button_buy_full_version"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/buy_full_version" />
    
    
      <Button
        android:id="@+id/button_nfc"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/nfc" />
      
    <Button
        android:id="@+id/button_scan"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/scan" />

</LinearLayout>
